--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,13 @@ Flask==3.0.3
 Flask-Cors==4.0.1
 Flask-Session==0.5.0
 Flask-SQLAlchemy==3.1.1
+SQLAlchemy==2.0.30
 python-dotenv==1.0.1
 psycopg==3.1.18
 bcrypt==4.1.3
 google-auth==2.29.0
+google-auth-oauthlib==1.0.0
+google-auth-httplib2==0.2.0
 sendgrid==6.11.0
 pymongo==4.7.2
-SQLAlchemy==2.0.30
-psycopg
+PyJWT==2.8.0
