--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask-SQLAlchemy==3.1.1
 SQLAlchemy==2.0.30
 python-dotenv==1.0.1
 psycopg==3.1.18
+psycopg2-binary
 bcrypt==4.1.3
 google-auth==2.29.0
 google-auth-oauthlib==1.0.0
@@ -12,9 +13,18 @@ google-auth-httplib2==0.2.0
 sendgrid==6.11.0
 pymongo==4.7.2
 PyJWT==2.8.0
-psycopg2-binary
-authlib
-numpy
-redis[hiredis]
-scikit-learn
-sentence-transformers
+authlib==1.3.0
+
+# Redis + vector search
+
+redis[hiredis]==5.0.8
+
+# ML stack for embeddings & similarity
+
+numpy==1.26.4
+scikit-learn==1.5.1
+sentence-transformers==3.0.1
+
+# SSL/CA cert support
+
+certifi==2024.7.4
