--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,25 +1,44 @@
-# Backend Dockerfile
+# ==========================
+# 1️⃣ Builder Stage
+# ==========================
+FROM python:3.11-slim AS builder
 
-# Use official Python runtime as a parent image
-FROM python:3.11-slim
-
-# Set working directory
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y gcc libpq-dev && rm -rf /var/lib/apt/lists/*
+# Install system dependencies including PostgreSQL dev libraries
+RUN apt-get update && apt-get install -y \
+    gcc \
+    libpq-dev \
+    postgresql-client \
+    && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements first (for caching)
+# Copy requirements
 COPY requirements.txt .
 
 # Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+RUN python -m venv /install && \
+    /install/bin/pip install --upgrade pip && \
+    /install/bin/pip install --no-cache-dir -r requirements.txt
 
-# Copy the app code
+# Copy backend code
 COPY . .
 
-# Expose backend port
+# ==========================
+# 2️⃣ Production Stage
+# ==========================
+FROM python:3.11-slim AS production
+
+WORKDIR /app
+
+# Copy virtual environment
+COPY --from=builder /install /install
+
+# Copy backend code
+COPY --from=builder /app /app
+
+# Set PATH
+ENV PATH="/install/bin:$PATH"
+
 EXPOSE 5000
 
-# Run Flask app
-CMD ["python", "-m", "server.app"]
+CMD ["python", "app.py"]
