developer changes :- fixed docker issue

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,25 +1,52 @@
-# Backend Dockerfile
+# # Backend Dockerfile
 
-# Use official Python runtime as a parent image
+# FROM python:3.11-slim
+
+# # Base working directory
+# WORKDIR /app
+
+# # Install system dependencies (needed for psycopg2)
+# RUN apt-get update && apt-get install -y gcc libpq-dev && rm -rf /var/lib/apt/lists/*
+
+# # Copy requirements from project root (one level up)
+# COPY ../requirements.txt ./requirements.txt
+
+# # Install Python dependencies
+# RUN pip install --no-cache-dir -r requirements.txt
+
+# # Copy backend source code into /app/server
+# COPY . ./server
+
+# # Move working directory into the backend folder
+# WORKDIR /app/server
+
+# # Expose backend port
+# EXPOSE 5000
+
+# # Start Flask app
+# CMD ["python", "app.py"]
+
+
+# Backend Dockerfile
 FROM python:3.11-slim
 
-# Set working directory
 WORKDIR /app
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y gcc libpq-dev && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements first (for caching)
+# Upgrade pip
+RUN pip install --upgrade pip
+
+# Copy requirements from *server folder*
 COPY requirements.txt .
 
-# Install Python dependencies
+# Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the app code
+# Copy all backend code into container
 COPY . .
 
-# Expose backend port
 EXPOSE 5000
 
-# Run Flask app
 CMD ["python", "-m", "server.app"]
