--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,22 +1,19 @@
 # Frontend Dockerfile
-
-# Use Node.js LTS image
 FROM node:20-alpine
 
-# Set working directory
 WORKDIR /app
 
-# Copy package files first (for caching)
+# Copy package files and install deps
 COPY package*.json ./
-
-# Install frontend dependencies
 RUN npm install
 
-# Copy rest of the frontend code
+# Copy source code
 COPY . .
 
-# Expose frontend port (usually 5173 for Vite or 3000 for React)
 EXPOSE 5173
 
-# Start development server
-CMD ["npm", "run", "dev"]
+ENV NODE_ENV=development
+ENV VITE_API_URL=http://localhost:5001
+
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
+
