--- a/requirements.txt
+++ b/requirements.txt
@@ -18,12 +18,21 @@ authlib==1.3.0
 # Redis + vector search
 
 redis[hiredis]==5.0.8
+qdrant-client==1.7.0
 
 # ML stack for embeddings & similarity
 
 numpy==1.26.4
 scikit-learn==1.5.1
 sentence-transformers==3.0.1
+tiktoken==0.5.2
+
+# Document processing
+
+PyPDF2==3.0.1
+python-docx==1.1.0
+python-pptx==0.6.23
+pdfplumber==0.10.3
 
 # SSL/CA cert support
 
