--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -28,25 +28,60 @@
 
 
 # Backend Dockerfile
-FROM python:3.11-slim
+#FROM python:3.11-slim
+
+#WORKDIR /app
+
+# Install system dependencies
+#RUN apt-get update && apt-get install -y gcc libpq-dev && rm -rf /var/lib/apt/lists/*
+
+# Upgrade pip
+#RUN pip install --upgrade pip
+
+# Copy requirements from *server folder*
+#COPY requirements.txt .
+
+# Install dependencies
+#RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy all backend code into container
+#COPY . .
+
+#EXPOSE 5000
+
+#CMD ["python", "-m", "server.app"]
+# Stage 1: Build stage
+FROM python:3.11-slim AS builder
 
 WORKDIR /app
 
-# Install system dependencies
+# Install build dependencies
 RUN apt-get update && apt-get install -y gcc libpq-dev && rm -rf /var/lib/apt/lists/*
 
 # Upgrade pip
 RUN pip install --upgrade pip
 
-# Copy requirements from *server folder*
+# Copy only requirements first
 COPY requirements.txt .
 
-# Install dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+# Install dependencies into /install directory
+RUN pip install --prefix=/install --no-cache-dir -r requirements.txt
 
-# Copy all backend code into container
+# Copy backend code
 COPY . .
+
+# Stage 2: Final runtime image
+FROM python:3.11-slim
+
+WORKDIR /app
+
+# Copy installed dependencies from builder
+COPY --from=builder /install /usr/local
+
+# Copy backend code
+COPY --from=builder /app /app
 
 EXPOSE 5000
 
+# Set entrypoint
 CMD ["python", "-m", "server.app"]
