--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 # Copy package files and install dependencies
 COPY package*.json ./
-RUN npm install   # use npm install instead of npm ci to avoid lockfile issue
+RUN npm install
 
 # Copy source code and build
 COPY . .
@@ -12,8 +12,10 @@ RUN npm run build
 
 # Stage 2: Serve with Nginx
 FROM nginx:alpine
+
 # Copy build output from builder stage
-COPY --from=builder /app/dist /usr/share/nginx/html
+# Adjusted to match Vite's outDir: ../dist/public
+COPY --from=builder /dist/public /usr/share/nginx/html
 
 # Expose port 80 for EC2 access
 EXPOSE 80
