--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -268,9 +268,8 @@ services:
     ports:
       - "5001:5000"
     environment:
-      - FLASK_ENV=development
+      - FLASK_ENV=production
       - PYTHONUNBUFFERED=1
-      - DATABASE_URL=postgresql+psycopg2://sonar:sonar123@43.204.3.223:5432/postgres
     command: python -m server.app           # <- run directly
     restart: unless-stopped
 
@@ -285,7 +284,7 @@ services:
       - ./client:/app
       - /app/node_modules
     ports:
-      - "8080:80"
+      - "5173:5173"
     environment:
       - NODE_ENV=production
       - VITE_API_URL=http://backend:5000
