--- a/client/package.json
+++ b/client/package.json
@@ -89,6 +89,8 @@
     "react-router-dom": "^7.9.1",
     "reactflow": "^11.11.4",
     "recharts": "^2.15.2",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
