--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "node scripts/copy-shared.js && vite build",
     "preview": "vite preview",
     "check": "tsc",
     "db:push": "drizzle-kit push"
