--- a/requirements.txt
+++ b/requirements.txt
@@ -40,4 +40,9 @@ certifi==2024.7.4
 aiohttp ==3.9.4
 fastapi==0.101.1
 httpx==0.26.0
-pytz==2024.2.2
+pytz>=2024.1
+
+langchain==0.2.14
+langchain-community==0.2.12
+langchain-openai==0.1.7
+openai==1.35.8
