--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -20,6 +20,12 @@ authlib==1.3.0
 redis[hiredis]==5.0.8
 qdrant-client==1.7.0
 
+# LangChain for conversational RAG
+langchain==0.1.20
+langchain-core==0.1.52
+langchain-community==0.0.38
+langchain-openai==0.1.7
+
 # ML stack for embeddings & similarity
 
 numpy==1.26.4
