--- a/client/package.json
+++ b/client/package.json
@@ -66,7 +66,7 @@
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
-    "emoji-picker-react": "^4.14.2",
+    "emoji-picker-react": "^4.15.1",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
@@ -86,6 +86,7 @@
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.4.0",
     "react-markdown": "^10.1.0",
+    "react-quill": "^2.0.0",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.9.1",
     "reactflow": "^11.11.4",
