refactor : refactor langding page as per AIDOS

--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,8 @@
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@react-oauth/google": "^0.12.2",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
     "@reactflow/controls": "^11.2.14",
     "@reactflow/minimap": "^11.7.14",
     "@reactflow/node-toolbar": "^1.3.14",
@@ -69,8 +71,9 @@
     "emoji-picker-react": "^4.15.1",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
-    "framer-motion": "^11.13.1",
+    "framer-motion": "^11.18.2",
     "google-auth-library": "^10.2.1",
+    "gsap": "^3.14.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
     "memoizee": "^0.4.17",
@@ -96,6 +99,7 @@
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.182.0",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
     "wouter": "^3.3.5",
